[Lailla] get data user by id, update documentation API
